[gd_scene load_steps=26 format=2]

[ext_resource path="res://Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_yuca.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_cubio.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_papa.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_zanahoria.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_remolacha.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_jengibre.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Tuberculos/logo_arracacha.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Tuberculos.gd" type="Script" id=9]
[ext_resource path="res://Sprites/logo_back.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Carne/fotos/res_molida.jpg" type="Texture" id=12]
[ext_resource path="res://Sprites/logo_fw.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.596078, 0.631373, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Lacteos" type="Node2D"]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.54902, 0.482353, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 86.5
margin_top = 120.0
margin_right = 489.5
margin_bottom = 160.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 403.0
margin_bottom = 40.0
rect_clip_content = true
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tuberculos"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 55.0
margin_right = 403.0
margin_bottom = 85.0
custom_constants/separation = 30

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 403.0
margin_bottom = 650.0
rect_min_size = Vector2( 0, 550 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 388.0
margin_bottom = 1368.0

[node name="HBoxPapa" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )

[node name="SpritePapa" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Papa"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonPapa" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxYuca" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 388.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteYuca" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Yuca"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonYuca" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxZanahoria" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 388.0
margin_bottom = 584.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteMantequilla" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Zanahoria"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonZanahoria" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxCubios" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 588.0
margin_right = 388.0
margin_bottom = 780.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteCubios" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Cubios"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonCubios" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxRemolacha" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 784.0
margin_right = 388.0
margin_bottom = 976.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteRemolacha" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 6 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Remolacha"
align = 1
clip_text = true
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonRemolacha" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxArracacha" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 980.0
margin_right = 388.0
margin_bottom = 1172.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteArracacha" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 8 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Arracacha"
align = 1
clip_text = true
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonArracacha" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxJengibre" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 1176.0
margin_right = 388.0
margin_bottom = 1368.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteJengibre" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 7 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Jengibre"
align = 1
clip_text = true
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonJengibre" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="BotonVolver" type="Button" parent="VBoxContainer"]
margin_top = 665.0
margin_right = 403.0
margin_bottom = 729.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "VOLVER"
icon = ExtResource( 10 )

[node name="Muestra" type="WindowDialog" parent="."]
margin_left = 43.0
margin_top = 120.0
margin_right = 543.0
margin_bottom = 820.0
rect_min_size = Vector2( 500, 800 )
custom_styles/panel = SubResource( 8 )
custom_fonts/title_font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Muestra"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 500, 800 )
rect_clip_content = true
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Muestra/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 500.0
margin_bottom = 30.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Muestra/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 34.0
margin_right = 500.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 10 )
text = "VARIANTE"
align = 1
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="Muestra/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 58.0
margin_right = 500.0
margin_bottom = 88.0
custom_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="Muestra/VBoxContainer"]
margin_top = 92.0
margin_right = 500.0
margin_bottom = 592.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Muestra/VBoxContainer"]
margin_top = 596.0
margin_right = 500.0
margin_bottom = 724.0

[node name="VSeparator" type="VSeparator" parent="Muestra/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 128.0
custom_constants/separation = 30

[node name="BotonAnterior" type="Button" parent="Muestra/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 162.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
disabled = true
icon = ExtResource( 10 )
expand_icon = true

[node name="VSeparator2" type="VSeparator" parent="Muestra/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 166.0
margin_right = 341.0
margin_bottom = 128.0
custom_constants/separation = 175

[node name="BotonSiguiente" type="Button" parent="Muestra/VBoxContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 473.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
disabled = true
icon = ExtResource( 13 )
expand_icon = true
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxPapa/VBoxContainer/BotonPapa" to="." method="_on_BotonPapa_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxYuca/VBoxContainer/BotonYuca" to="." method="_on_BotonYuca_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxZanahoria/VBoxContainer/BotonZanahoria" to="." method="_on_BotonZanahoria_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxCubios/VBoxContainer/BotonCubios" to="." method="_on_BotonCubios_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRemolacha/VBoxContainer/BotonRemolacha" to="." method="_on_BotonRemolacha_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxArracacha/VBoxContainer/BotonArracacha" to="." method="_on_BotonArracacha_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxJengibre/VBoxContainer/BotonJengibre" to="." method="_on_BotonJengibre_button_up"]
[connection signal="button_up" from="VBoxContainer/BotonVolver" to="." method="_on_BotonVolver_button_up"]
[connection signal="button_up" from="Muestra/VBoxContainer/HBoxContainer/BotonAnterior" to="." method="_on_BotonAnterior_button_up"]
[connection signal="button_up" from="Muestra/VBoxContainer/HBoxContainer/BotonSiguiente" to="." method="_on_BotonSiguiente_button_up"]
